[#465792] fix vertical align buttons text in IE

--- a/resources/styles/themes/main/styles.css
+++ b/resources/styles/themes/main/styles.css
@@ -433,7 +433,7 @@
 }
 */
 .toolbar-btn__text {
-  vertical-align: initial;
+  vertical-align: baseline;
 }
 .dataset-footer {
   height: 27px;
